src/assets/main.css
*,
*::before,
*::after {
	box-sizing: border-box;
}

html {
	--h-size: 60ch;
	--spacing: 0.5rem;
	--spacing-reduced: calc(var(--spacing) * 0.667); /* modular scale-ish */
	--spacing-extra: calc(var(--spacing) * 3.375); /* modular scale-ish */
	--border-size: 1px;
	--color-fg: #000;
	--color-bg: #FFF;
	--color-acc: #333;
	--color-border: #DDD;
	--color-link: #00C;
	--color-link-visited: #518;

	/* outdent while keeping content box consistent */
	--border-outdent-left: var(--spacing-reduced);
	--spacing-outdent-left: calc(var(--spacing) + var(--border-outdent-left));
	--spacing-outdent-right: calc(var(--spacing) + var(--border-size));

	background-color: var(--color-acc);
}

body {
	margin: 0;
	font-family: system-ui, sans-serif;
	line-height: 1.5;
	color: var(--color-fg);
	background-color: var(--color-bg);
}

main {
	--_offset: calc(2 * var(--border-size));
	--_spacing-left: calc(var(--spacing-outdent-left) + var(--_offset));
	--_spacing-right: calc(var(--spacing-outdent-right) + var(--_offset));

	max-width: calc(var(--h-size) + var(--_spacing-left) + var(--_spacing-right));
	margin-inline: auto;
	padding-left: var(--_spacing-left);
	padding-right: var(--_spacing-right);
	padding-bottom: var(--spacing); /* XXX: hacky? */
}

a:link {
	color: var(--color-link);
}
a:visited {
	color: var(--color-link-visited);
}

/* layout utilities */

.stack > * {
	display: block;
	margin-top: 0;
	margin-bottom: 0;
}
.stack > * + * {
	margin-top: var(--spacing);
}

/* site header */

.site-header {
	background-color: var(--color-acc);
}
.site-header,
.site-header a {
	color: var(--color-bg);
}

.site-header nav {
	display: flex;
	gap: var(--spacing);
	flex-wrap: wrap; /* just to be safe */
	align-items: center;
}

.site-header nav a {
	padding: var(--spacing);
}

.site-header a:first-of-type {
	padding-left: var(--spacing-extra);
}
.site-header a:first-of-type + * {
	margin-left: var(--spacing-extra);
}

/* decoration */
.site-header a:first-of-type,
.site-header a:first-of-type > * {
	position: relative;
}
.site-header a:first-of-type::before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: calc(100% + var(--spacing-extra));
	height: 100%;
	background-color: var(--color-fg);
	transform: skew(-30deg);
	transform-origin: top;
}

/* article */

.article > header .metadata {
	margin-top: 0;
	font-size: small;
}
.article > header .metadata,
.article > header .metadata a {
	color: var(--color-acc);
}
.article > header .metadata b {
	font-weight: normal;
}
.article > header .metadata * + *::before {
	content: "• ";
}

.article aside {
	border-width: calc(3 * var(--border-size)) 0; /* XXX: magic value */
	border-style: solid;
	border-color: rgba(110, 140, 192, 0.8); /* XXX: magic value */
	padding: var(--spacing) var(--spacing-extra); /* NB: also accounts for outdent */
	background-color: rgba(220, 232, 255, 0.2); /* XXX: magic value */
}

.article pre {
	overflow: auto;
	margin-left: calc(-1 * var(--spacing-outdent-left));
	margin-right: calc(-1 * var(--spacing-outdent-right));
	border: var(--border-size) solid var(--color-border);
	border-left-width: var(--border-outdent-left);
	border-radius: var(--spacing);
	padding: var(--spacing);
}

.article img {
	max-width: 100%;
}

